--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       </li>
     </ul>
   </div>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src='shopping_list.js'></script>
 </body>
 </html>
